--- a/vista-restaurent/src/App.css
+++ b/vista-restaurent/src/App.css
@@ -10,3 +10,6 @@ header{
 .section-container{
     @apply max-w-screen-2xl container mx-auto xl:px-24 px-4;
 }
+.subtitle{
+    @appky text-red uppercase tracking-wide font-medium text-lg
+}
